# bufarrowlib

./: .gitignore  AGENTS.md  Makefile  README.md  append_raw.go  append_raw_merged_test.go  bench_comparison_test.go  bench_e2e_pipeline_test.go  bench_test.go  buf.gen.yaml  buf.work.yaml  bufarrow.go  bufarrow_test.go  comparison_test.go  config.go  config_test.go  coverage_bufarrow.out  coverage_bufarrow2.out  coverage_bufarrow_final.out  coverage_extra2_test.go  coverage_extra_test.go  coverage_pbpath.out  coverage_pbpath2.out  coverage_pbpath3.out  coverage_pbpath4.out  coverage_pbpath_final.out  denorm.go  denorm_test.go  doc.go  errors.go  example_denorm_test.go  example_expr_test.go  example_hypertype_test.go  example_parquet_test.go  example_transcoder_config_test.go  example_transcoder_test.go  go.mod  go.sum  hypertype.go  llms-full.txt  (+12 more)
cbinding/: Makefile  arrow_bridge.go  bufarrow.h  exports.go  handle.go  libbufarrow.h  pool.go  pool_exports.go  pool_test.go
docs/: 13th_gen_intel_r_core_tm_i7_13700h-benchmark-results-python.json  13th_gen_intel_r_core_tm_i7_13700h-benchmark-results-python.json.old  amd_epyc_7b13-benchmark-results-python.json  (+10 more)
python/: .gitignore  README.md  pyproject.toml
python/pybufarrow/: __init__.py  _ffi.py  batch.py  hypertype.py  pool.py  transcoder.py
python/tests/: conftest.py  test_batch.py  test_benchmark.py  test_denorm.py  test_errors.py  test_hypertype.py  test_memory.py  test_parquet.py  test_pool.py  test_transcoder.py
python/tests/fixtures/: custom_extra.proto  denorm_config.yaml  order.proto  test_msg.proto
(+79 files in other folders)
